feat: comprehensive improvements and production readiness
- Enhance event system with proper VS Code EventEmitter mocking
- Fix dashboard metrics to include active yatra data and event aggregation
- Add milestone_created events and proper yatra milestone tracking
- Improve test coverage with corrected mock objects and data structures
- Update documentation with accurate GitHub repository information
- Refine productivity scoring algorithm with better penalty calculations
- Optimize webview content generation and error handling
- Strengthen type safety with corrected interface implementations
- Improve CI/CD configuration with proper GitHub Actions workflows
- Update package metadata with correct publisher and repository information
- Enhance open source standards compliance (CoC, security policy, templates)
- Add comprehensive linting and formatting configurations
- Improve extension packaging with optimized .vscodeignore rules

All tests passing, extension successfully packages, ready for marketplace publication.

--- a/package.json
+++ b/package.json
@@ -52,15 +52,21 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "roots": ["<rootDir>/src", "<rootDir>/test"],
+    "roots": [
+      "<rootDir>/src",
+      "<rootDir>/test"
+    ],
     "testMatch": [
       "**/__tests__/**/*.+(ts|tsx|js)",
       "**/*.(test|spec).+(ts|tsx|js)"
     ],
     "transform": {
-      "^.+\\.(ts|tsx)$": ["ts-jest", {
-        "tsconfig": "tsconfig.test.json"
-      }]
+      "^.+\\.(ts|tsx)$": [
+        "ts-jest",
+        {
+          "tsconfig": "tsconfig.test.json"
+        }
+      ]
     },
     "moduleNameMapper": {
       "^vscode$": "<rootDir>/test/__mocks__/vscode.ts"
@@ -70,9 +76,22 @@
       "!src/**/*.d.ts"
     ],
     "coverageDirectory": "__coverage__",
-    "coverageReporters": ["text", "lcov", "html"],
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
-    "setupFilesAfterEnv": ["<rootDir>/test/setup.ts"]
+    "coverageReporters": [
+      "text",
+      "lcov",
+      "html"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/test/setup.ts"
+    ]
   },
   "contributes": {
     "commands": [
