--- a/package.json
+++ b/package.json
@@ -200,6 +200,7 @@
     "prettier": "^3.0.0",
     "rimraf": "^6.1.2",
     "ts-jest": "^29.4.6",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "typescript-eslint": "^8.49.0"
   }
 }
