fix: restore CI/CD workflows and update Jest configuration
- Recreate CI workflow with multi-OS testing (ubuntu, windows, macos)
- Add release workflow for publishing to VS Code Marketplace
- Update Jest config to only test .ts files (exclude compiled .js)
- Fix test:ci command to use proper CI flags
- Update Codecov configuration to match existing setup

--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
       "<rootDir>/test"
     ],
     "testMatch": [
-      "**/__tests__/**/*.+(ts|tsx|js)",
-      "**/*.(test|spec).+(ts|tsx|js)"
+      "**/__tests__/**/*.+(ts|tsx)",
+      "**/*.(test|spec).+(ts|tsx)"
     ],
     "transform": {
       "^.+\\.(ts|tsx)$": [
